--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.0",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
